<resources>
    <string name="app_name">Invision</string>
    <string name="register_now">Register Now</string>
    <string name="login_now">Login Now</string>
    <string name="welcome">Welcome</string>
    <string name="get_otp">Get OTP</string>
    <string name="register_new_account">Register New account</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="otp_instruction"> <font fgcolor='#FF8E8E93'>We will send you</font> <b> One Time Password</b>\n <font fgcolor='#FF8E8E93'>on this mobile Number</font></string> <!--gray-->
    <string name="et_phone_no_hint">Ex.9033056422</string>
    <string name="logo">Logo</string>

    <string name="phone_number_cnt_blank">Phone Number cannot be empty</string>
    <string name="enter_a_valid_phone_no">Enter a valid phone number</string>
    <string name="phone_number_length">Phone Number must be of 15 digits</string>

</resources>