<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="chemicalDetails"
            type="com.example.societyapp.WelcomeActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/welcome_screen_background">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_90dp"
            android:layout_marginTop="@dimen/dimen_90dp"
            android:layout_marginEnd="@dimen/dimen_90dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_43p"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/iv_logo_background"
            android:layout_width="@dimen/dimen_103dp"
            android:layout_height="@dimen/dimen_103dp"
            android:layout_marginTop="@dimen/dimen_44dp"
            android:background="@drawable/circle_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:srcCompat="@drawable/ic_launcher_background" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="@dimen/dimen_54dp"
            android:layout_height="@dimen/dimen_45dp"
            android:layout_marginStart="@dimen/dimen_30dp"
            android:layout_marginTop="@dimen/dimen_20dp"
            android:layout_marginEnd="@dimen/text_size_30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/iv_logo_background"
            app:srcCompat="@drawable/ic_buildings" />

        <TextView
            android:id="@+id/iv_logo_text"
            android:layout_width="32dp"
            android:layout_height="19dp"
            android:layout_marginTop="4dp"
            android:text="@string/logo"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_logo"
            app:srcCompat="@drawable/ic_launcher_background" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="206dp"
            android:layout_height="52dp"
            android:layout_marginStart="@dimen/dimen_100dp"
            android:layout_marginTop="348dp"
            android:layout_marginEnd="@dimen/dimen_100dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/button_background"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/login_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/bt_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpUsage" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="@dimen/dimen_206dp"
            android:layout_height="@dimen/dimen_54dp"
            android:layout_marginStart="@dimen/dimen_100dp"
            android:layout_marginEnd="@dimen/dimen_100dp"
            android:layout_marginBottom="@dimen/dimen_94dp"
            android:background="@drawable/button_background_transparent"
            android:padding="@dimen/dimen_5dp"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:ignore="MissingConstraints,SpUsage" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>